# src/auth/dto/index.ts
@@ -6,3 +6,9 @@ export { ChangePasswordDto } from './change-password.dto';
 export { RefreshTokenDto } from './refresh-token.dto';
 export { UserDto } from './user.dto';
 export { TokenPairDto, AuthSessionDto } from './token-pair.dto';
+export { GoogleLoginDto, GoogleRegisterDto } from './google-auth.dto';
+export { CreateLocalUserDto } from './create-local-user.dto';
+export {
+  FirebaseAuthTokensDto,
+  FirebaseGoogleSignInDto,
+} from './firebase-auth.dto';
